--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0019)https://column.fun/ -->
 <html lang="ru-RU"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="facebook-domain-verification" content="98z9gf8ag6pwho5asp0mmsq5cwemk7">
-	<title>Покупай Комплект 5в1 по цене одного гадежета</title>
-	<meta name="description" content="Мощная bluetooth колонка + Power Bank 50000mah">
+	<title>Дитяча гойдалка</title>
+	<meta name="description" content="Дитяча гойдалка">
 	<link rel="icon" href="" type="image/x-icon">
 	
 	
