--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				<img src="./дитяча гойдалка_files/order_steps__step3_icondebce.png" alt="">
 				<div class="separator"></div>
 				<h4>Відправка</h4>
-				<p>Доставимо ваше замовлення впродовж 1-2 днів/p>
+				<p>Доставимо ваше замовлення впродовж 1-2 днів</p>
 			</div>
 			<div class="step_item">
 				<img src="./дитяча гойдалка_files/order_steps__step4_icon23b31.png" alt="">
