--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="./дитяча гойдалка_files/owl.carousel.mined58d.css">
 	<link rel="stylesheet" type="text/css" href="./дитяча гойдалка_files/styles5ac75.css">
 
-
+<head>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -31,12 +31,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=1946770779114038&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-
-	
-
 </head>
-
-
 <body>
 
 
